refactor: Backend-API schichtenbasiert strukturieren